--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -8,8 +8,6 @@ html {
 
 p {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 #content {
@@ -17,7 +15,7 @@ p {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  width: 650px;
+  width: 75%;
 }
 
 #navbar {
@@ -47,9 +45,36 @@ li a:hover {
 }
 
 #selfie {
-  width: 50%;
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
   border-radius: 50%;
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.project {
+  float: left;
+  display: block;
+  position: relative;
+  background: white;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 265px;
+  margin: 16px;
+}
+
+.project:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.proj-desc {
+  padding: 10px 10px;
+}
+
+.proj-img {
+  object-fit: cover;
+  width: 265px;
+  height: 160px;
 }
