--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -120,3 +120,8 @@ input[type=text], input[type=email], textarea {
 textarea {
   height: 150px;
 }
+
+#random-img {
+  object-fit: contain;
+  width: 450px;  
+}
